# vecno-desktop-wallet

./: Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  styles.css
public/css/: buttons.css  colors.css  create_wallet.css  home.css  import_wallet.css  intro.css  media.css  mnemonic.css  navigation.css  receive.css  styles.css  toast.css  tooltip.css  tx_details.css
src/: app.rs  main.rs  models.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: balance.rs  checks.rs  get_transactions.rs  lib.rs  main.rs  models.rs  node.rs  send_transactions.rs  state.rs  transactions.rs  wallet.rs
src-tauri/src/wallet/: close.rs  create.rs  import.rs  mod.rs  open.rs  switch.rs
src/components/: create_wallet.rs  dashboard.rs  home.rs  import_wallet.rs  intro.rs  mnemonic_display.rs  mod.rs  receive.rs  send.rs  toast.rs  transactions.rs  tx_detail_modal.rs  wallet_select.rs
