[package]
name = "vecno-wallet-ui"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["src-tauri"]

# Runtime dependencies
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["BeforeUnloadEvent", "HtmlSelectElement", "HtmlInputElement", "HtmlElement", "Window", "Navigator", "Clipboard", "ClipboardEvent"] }
js-sys = "0.3.70"

# Serialization
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.6.1"
serde_json = "1"  # For json! macro

# Logging and debugging
log = "0.4.28"
wasm-logger = "0.2"
console_error_panic_hook = "0.1.7"
gloo-timers = "0.3.0"
