[package]
name = "vecno-wallet"
version = "0.1.0"
description = "A Vecno Wallet App"
authors = ["you"]
edition = "2021"

[[bin]]
name = "vecno-wallet"
path = "src/main.rs"

[package.metadata.windows]
subsystem = "windows"

# Build dependencies
[build-dependencies]
tauri-build = { version = "2", features = [] }

# Runtime dependencies
[dependencies]
# Tauri and related plugins
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "main", features = ["tauri"] }

# Serialization
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = "1"
serde-wasm-bindgen = "0.6.1"

# Vecno project dependencies
vecno-wallet-core = { git = "https://github.com/Yooshikii/testnet1.git", branch = "main" }
vecno-wrpc-client = { git = "https://github.com/Yooshikii/testnet1.git", branch = "main" }
vecno-rpc-core = { git = "https://github.com/Yooshikii/testnet1.git", branch = "main" }
vecno-consensus-core = { git = "https://github.com/Yooshikii/testnet1.git", branch = "main" }
vecno-addresses = { git = "https://github.com/Yooshikii/testnet1.git", branch = "main" }
vecno-wallet-pskt = { git = "https://github.com/Yooshikii/testnet1.git", branch = "main" }
vecno-consensus-client = { git = "https://github.com/Yooshikii/testnet1.git", branch = "main" }
vecno-bip32 = { git = "https://github.com/Yooshikii/testnet1.git", branch = "main" }

# Asynchronous runtime
tokio = { version = "1", features = ["full"] }
async-std = "1.12"
futures-lite = "2.6.1"
futures-util = "0.3.31"
chrono = "0.4.42"

# Web and WASM
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["console"] }
js-sys = "0.3.70"

# Logging and debugging
log = "0.4"
env_logger = "0.11.8"
wasm-logger = "0.2"
console_error_panic_hook = "0.1.7"
winnow = "0.7.13"

# Workflow and RPC
workflow-core = "0.18.0"
workflow-rpc = { version = "0.18.0", default-features = false, features = ["rustls-tls-webpki-roots"] }
borsh = { version = "1.5.7", features = ["rc"] }

# Cryptography and utilities
bip39 = { version = "2.2", features = [] }
rand = "0.8"
