[package]
name = "vecno-wallet"
version = "0.1.0"
description = "A Vecno Wallet App"
authors = ["you"]
edition = "2021"

[[bin]]
name = "vecno-wallet"
path = "src/main.rs"

[package.metadata.windows]
subsystem = "windows"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"

# Serialization
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = "1"
serde-wasm-bindgen = "0.6.1"

# Vecno crates (native)
vecno-wallet-core = { git = "https://github.com/Yooshikii/testnet1.git", branch = "main" }
vecno-wrpc-client = { git = "https://github.com/Yooshikii/testnet1.git", branch = "main" }
vecno-rpc-core = { git = "https://github.com/Yooshikii/testnet1.git", branch = "main" }
vecno-consensus-core = { git = "https://github.com/Yooshikii/testnet1.git", branch = "main" }
vecno-addresses = { git = "https://github.com/Yooshikii/testnet1.git", branch = "main" }
vecno-consensus-client = { git = "https://github.com/Yooshikii/testnet1.git", branch = "main" }

# Async runtime (native only)
tokio = { version = "1", features = ["full"] }
async-std = "1.12"
futures-lite = "2.6.1"
futures-util = "0.3.31"

# Time
chrono = { version = "0.4.42", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11.8"
console_error_panic_hook = "0.1.7"

# Misc
winnow = "0.7.13"
workflow-core = "0.18.0"
workflow-rpc = { version = "0.18.0", default-features = false, features = ["rustls-tls-webpki-roots"] }
borsh = { version = "1.5.7", features = ["rc"] }
bip39 = "2.2"
rand = "0.8"
hex = "0.4.3"
